--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "openai": "^4.24.7"
   },
   "devDependencies": {
     "eslint": "^8.56.0"
